# scrapr

./: .gitignore  Makefile  README.md  pyproject.toml
src/scrapr/: config.py  main.py
src/scrapr/action/: parse.py  persist.py  scrape.py
src/scrapr/model/: command.py  contact.py
src/scrapr/sites/: uic.py
tests/: test_contact.py  test_main.py  test_parse.py  test_persist.py  test_scrape.py  test_uic.py
tests/resources/: contact.html  contacts.txt  uic_consultant_contacts.csv
